# AlgoTeam

./: README.md
cbir_sys/: README.md  cbir_index.py  cbir_run.py  index_image_tool.py  requirements.txt
cbir_sys/cbir/: cnn_feature.py  combine_db.py  index_image.py  query_faiss.py
cbir_sys/cbir/data_factory/: gen_triplet_data.py
cbir_sys/cbir/eva/python/: download.py  evaluate.py  example_evaluate.py  example_process_distractors.py  example_process_images.py
cbir_sys/common/: combine_db.py  index_image.py
cbir_sys/support/: query.hdf5
cbir_sys/tools/data_factory/: gen_triplet_data.py
cbir_sys/tools/eva/: README.md  eva.py
cbir_sys/tools/eva/feature/: extract_image_feature.py
cbir_sys/tools/eva/python/: dataset.py  evaluate.py  example_evaluate.py  my_evaluate.py
cbir_sys/tools/feature_factory/netvlad/: README.md  example.py
cbir_sys/tools/feature_factory/netvlad/netvlad_tf/: image_descriptor.py  layers.py  mat_to_checkpoint.py  net_from_mat.py  nets.py  precision_recall.py
kf/: CMakeLists.txt  README.md  main.cpp
kf/cmake/: CMakeHelper.cmake
kf/src/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.h
